# WXPluginSDK

./: README.md
app/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: config.cpp  cursor.cpp  filetools.cpp  helper.cpp  md5.cpp  message.cpp  native.cpp  sharedpreftools.cpp  systools.cpp  wxtools.cpp
app/src/main/cpp/include/: config.h  cursor.h  filetools.h  helper.h  md5.h  message.h  sharedpreftools.h  systools.h  wxtools.h
app/src/main/java/com/jyong/wxpluginsdk/: DBTool.java  Init.java  MainActivity.java  NativeTools.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
